unpackaged/main/default/objects/QA_Sheet__c/QA_Sheet__c.object-meta.xml
<CustomObject>
    <label>QA Sheet</label>
    <nameField>
        <displayFormat>QA-{0000}</displayFormat>
        <label>QA Sheet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QA Sheet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>