unpackaged/main/default/objects/QA_Sheet__c/fields/Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details__c</fullName>
    <label>Additional Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>