unpackaged/main/default/objects/QA_Sheet__c/fields/Benefit_Order__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Order</label>
    <referenceTo>Benefit_Order__c</referenceTo>
    <relationshipLabel>QA Sheet</relationshipLabel>
    <relationshipName>QA_Sheet</relationshipName>
    <type>Lookup</type>
</CustomField>