unpackaged/main/default/objects/QA_Sheet__c/fields/Benefits_Point_of_Contact_Name_SFDC__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Point_of_Contact_Name_SFDC__c</fullName>
    <label>Benefits Point of Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>