unpackaged/main/default/objects/QA_Sheet__c/fields/Does_group_have_an_address_change__c.field-meta.xml
<CustomField>
    <fullName>Does_group_have_an_address_change__c</fullName>
    <description>Passed on qa_sheet_info event for renewals, indicates whether the company is updating their address</description>
    <label>Does group have an address change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>