unpackaged/main/default/objects/QA_Sheet__c/fields/OOO_Hand_off_comments__c.field-meta.xml
<CustomField>
    <fullName>OOO_Hand_off_comments__c</fullName>
    <label>OOO Hand off comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>