unpackaged/main/default/objects/QA_Sheet__c/fields/PEO_switcher__c.field-meta.xml
<CustomField>
    <fullName>PEO_switcher__c</fullName>
    <description>Passed on qa_sheet_info event, indicates if company is a PEO switcher or not</description>
    <label>PEO switcher?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>