unpackaged/main/default/objects/QA_Sheet__c/fields/Renewing_TAdAs__c.field-meta.xml
<CustomField>
    <fullName>Renewing_TAdAs__c</fullName>
    <label>Renewing TAdAs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HSA</fullName>
            </value>
            <value>
                <fullName>Commuter</fullName>
            </value>
            <value>
                <fullName>Flexible Spending Account - Dependent Care</fullName>
            </value>
            <value>
                <fullName>Flexible Spending Account - Medical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>