unpackaged/main/default/objects/QA_Sheet__c/fields/Signatory_Name_Title__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Name_Title__c</fullName>
    <label>Signatory Name &amp; Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>