unpackaged/main/default/objects/QA_Sheet__c/fields/Special_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Special_Enrollment__c</fullName>
    <label>Special Enrollment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>