unpackaged/main/default/objects/QA_Sheet__c/fields/Subject_to_Federal_or_State_Cobra__c.field-meta.xml
<CustomField>
    <fullName>Subject_to_Federal_or_State_Cobra__c</fullName>
    <description>This field is used to store the &apos;subject_to_federal_or_state_cobra&apos; attribute value from HiGroupEvent.</description>
    <label>Subject to Federal or State Cobra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>