unpackaged/main/default/objects/QA_Sheet__c/fields/Transition_to_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Transition_to_Fulfillment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transition to Fulfillment</label>
    <referenceTo>Transition_to_Fulfillment__c</referenceTo>
    <relationshipLabel>QA Sheet</relationshipLabel>
    <relationshipName>QA_Sheet</relationshipName>
    <type>Lookup</type>
</CustomField>