unpackaged/main/default/objects/QA_Sheet__c/fields/Waived_waiting_period_for_new_hires__c.field-meta.xml
<CustomField>
    <fullName>Waived_waiting_period_for_new_hires__c</fullName>
    <label>Waived waiting period for new hires?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>