unpackaged/main/default/objects/QA_Sheet__c/recordTypes/Benefit_Change.recordType-meta.xml
<RecordType>
    <fullName>Benefit_Change</fullName>
    <active>true</active>
    <label>Benefit Change</label>
</RecordType>